--- a/Project3/Project_3.Rmd
+++ b/Project3/Project_3.Rmd
@@ -101,14 +101,14 @@ Using your training data, let’s create a model using method `UBCF` .
 
 ```{r UBCF Model}
 tic("UBCF Model - Training")
-modelUBCF <- Recommender(train, method = "UBCF", parameter = NULL)
+UBCF_model <- Recommender(train, method = "UBCF", parameter = NULL)
 toc(log = TRUE, quiet = TRUE)
 
 tic("UBCF Model - Predicting")
-predUBCF <- predict(modelUBCF, newdata = known, n = 6 ,type = "ratings")
+pred_UBCF <- predict(UBCF_model, newdata = known, n = 6 ,type = "ratings")
 toc(log = TRUE, quiet = TRUE)
 
-(accUBCF <- calcPredictionAccuracy(predUBCF, unknown))
+(accUBCF <- calcPredictionAccuracy(pred_UBCF, unknown))
 ```
 
 
@@ -117,20 +117,62 @@ toc(log = TRUE, quiet = TRUE)
 
 ```{r SVD Model}
 tic("SVD Model - Training")
-modelSVD <- Recommender(train, method = "SVD", parameter = list(k = 20))
+SVD_model <- Recommender(train, method = "SVD", parameter = list(k = 20))
 toc(log = TRUE, quiet = TRUE)
 
 tic("SVD Model - Predicting")
-predSVD <- predict(modelSVD, newdata = known, type = "ratings")
+pred_SVD <- predict(SVD_model, newdata = known, type = "ratings")
 toc(log = TRUE, quiet = TRUE)
 
-( accSVD <- calcPredictionAccuracy(predSVD, unknown) )
+( accSVD <- calcPredictionAccuracy(pred_SVD, unknown) )
 ```
 
 <span style="font-size:18px;"> To conclude, RMSE is very similar to the UBCF Model </span>
 
 ## Evaluation
 
+Now let us evaluate our predictions by seeing the prediction matrix of a particular user.
+
+```{r}
+mov_rated <- as.data.frame(UI@data[c("17"), ]) 
+colnames(mov_rated) <- c("rating")
+mov_rated$movieId <- as.integer(rownames(mov_rated))
+
+mov_rated <- mov_rated %>% filter(rating != 0) %>% 
+  inner_join (movie_data, by="movieId") %>%
+  arrange(rating) %>%
+  select(Movie = "title", rating)
+knitr::kable(mov_rated, format = "html") %>%
+  kable_styling(bootstrap_options = c("striped", "hover"), full_width = F)
+```
+
+Here, let’s see for user 17th
+
+### UCBF Prediction
+
+```{r}
+UCBF_recommend <- as.data.frame(pred_UBCF@data[17, ])
+colnames(UCBF_recommend) <- c("Rating")
+UCBF_recommend$movieId <- as.integer(rownames(UCBF_recommend))
+UCBF_recommend <- UCBF_recommend %>% arrange(desc(Rating)) %>% head(6) %>% 
+  inner_join (movie_data, by="movieId") %>%
+  select(Movie = "title")
+knitr::kable(UCBF_recommend, format = "html") %>%
+  kable_styling(bootstrap_options = c("striped", "hover"), full_width = F)
+```
+
+
+
+```{r}
+SVD_recommend <- as.data.frame(pred_SVD@data[17, ]) 
+colnames(SVD_recommend) <- c("rating")
+SVD_recommend$movieId <- as.integer(rownames(SVD_recommend))
+SVD_recommend <- SVD_recommend %>% arrange(desc(rating)) %>% head(6) %>% 
+  inner_join (movie_data, by="movieId") %>%
+  select(Movie = "title")
+knitr::kable(SVD_recommend, format = "html") %>%
+  kable_styling(bootstrap_options = c("striped", "hover"), full_width = F)
+```
 ### Run-time
 
 One major difference between SVD and UBCF Model is their run-times.
@@ -141,32 +183,15 @@ Let’s explore their log displays to individually analyze their run-time.
 log <- as.data.frame(unlist(tic.log(format = TRUE)))
 colnames(log) <- c("Run Time")
 knitr::kable(log, format = "html") %>%
-  kable_styling(bootstrap_options = "striped", full_width = F)
+  kable_styling(bootstrap_options = c("striped", "hover"), full_width = F)
 ```
+
+
+
+## Summary results.
 
 As we can see from the log display of both the models:
 
 UBCF takes less time to build a model, but takes more resources making predictions while SVD model is the opposite - resource intensive to build a model, but quick to make predictions.
-
-## Evaluation
-Now let us evaluate our predictions by seeing the prediction matrix of a particular user.
-
-```{r}
-mov_rated <- as.data.frame(UI@data[c("400"), ]) 
-colnames(mov_rated) <- c("rating")
-mov_rated$movieId <- as.integer(rownames(mov_rated))
-
-mov_rated <- mov_rated %>% filter(rating != 0) %>% 
-  inner_join (movie_data, by="movieId") %>%
-  arrange(rating) %>%
-  select(Movie = "title", rating)
-knitr::kable(mov_rated, format = "html") %>%
-  kableExtra::kable_styling(bootstrap_options = c("striped", "hover"))
-```
-
-Here, let’s see for user 400th
-## Summary results.
-
-For both Item-Item and User-User collaborative filtering, the recommendations which the user got was almost similar. Movie ratings extracted for the first user consisted of action genre movies. Therefore it was interesting to see that the movies recommended to the same user also consisted of same genre movies.
 
 
