--- a/Final/Final_Proposal.Rmd
+++ b/Final/Final_Proposal.Rmd
@@ -13,6 +13,18 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+```{r message=FALSE, warning=FALSE}
+#load library
+if (!require("knitr")) install.packages("knitr")
+if (!require("tidyverse")) install.packages("tidyverse")
+if (!require("kableExtra")) install.packages("kableExtra")
+if (!require("dplyr")) install.packages("dplyr")
+if (!require("Matrix")) install.packages("Matrix")
+if (!require("recommenderlab")) install.packages("recommenderlab")
+if (!require("gridExtra")) install.packages("gridExtra")
+if (!require("graphics")) install.packages("graphics")
+```
+
 ## Objective 
 
 <span style="font-size:16px;"> I am going to build an ALS based recommender system. ALS recommender is a matrix factorization algorithm in Collaborative Filtering that uses Alternating Least Squares </span>
@@ -32,6 +44,29 @@ knitr::opts_chunk$set(echo = TRUE)
 * local geographic information systems
 
 GroupLens Research operates a movie recommender based on collaborative filtering, MovieLens, which is the source of these data. We encourage you to visit http://movielens.org to try it out! If you have exciting ideas for experimental work to conduct on MovieLens, send us an email at grouplens-info@cs.umn.edu - we are always interested in working with external collaborators.
+
+```{r}
+ratings_data <- read.csv('ratings.csv', stringsAsFactors = F)
+movie_data <- read.csv('movies.csv', stringsAsFactors = F)
+tags_data <- read.csv('tags.csv', stringsAsFactors = F)
+links_data <- read.csv('links.csv', stringsAsFactors = F)
+```
+
+
+```{r echo=TRUE, paged.print=TRUE}
+#Load results
+head(ratings_data) %>% kable()%>%
+  kable_styling(bootstrap_options = "striped", full_width = F)
+
+head(movie_data)%>% kable()%>%
+  kable_styling(bootstrap_options = "striped", full_width = F)
+
+head(tags_data)%>% kable()%>%
+  kable_styling(bootstrap_options = "striped", full_width = F)
+
+head(links_data)%>% kable()%>%
+  kable_styling(bootstrap_options = "striped", full_width = F)
+```
 
 ## Results
 Determining the recommendation techniques which achieved highest accuracy.
